update index.css to prevent horizontal scrolling

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap");
+html,
+body,
+#root {
+  width: 100%;
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
 body {
   scroll-behavior: smooth;
   box-sizing: border-box;
